# mrafit

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
examples/: effect_of_resolution.ipynb  example.ipynb  fitting_with_gausslet.ipynb  sharp_gausslet.ipynb
mrafit/: __init__.py  coeffs.yaml  test_gausslets.ipynb  unitary_circ_coefficient.py  utils.py  wavelet_bases.py  wavelet_coefficients.py
tests/: test_functions.py  test_wavelets.py
