[project]
name = "mrafit"
version = "0.1.0"
description = ""
authors = [
    {name = "Utkarsh Saraswat",email = "utkarsh.saraswat@lrz.de"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)",
    "scipy (>=1.16.1,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "pyyaml (>=6.0,<7.0)"
]

license = { text = "MIT" }

[tool.poetry]

[tool.poetry.group.dev.dependencies]
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
