[project]
name = "mrafit"
version = "1.1.1"
description = ""
authors = [
    {name = "Utkarsh Saraswat",email = "utkarsh.saraswat@lrz.de"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)",
    "scipy (>=1.16.1,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "pyyaml (>=6.0,<7.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "pyqt6 (>=6.9.1,<7.0.0)"
]

license = { text = "MIT" }

[tool.poetry]

[tool.poetry.group.dev.dependencies]
seaborn = "^0.13.2"
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
